--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <md-toolbar>
+    <!-- <md-toolbar>
         <md-toolbar-row class="navbar admin">
             <ul menu="admin" class="list-inline nav"></ul>
         </md-toolbar-row>
-    </md-toolbar>
+    </md-toolbar> -->
     <div class="row">
         <div class="col-sm-12">
             <div class="section">
