--- a/src/app/components/posts/briefing-list.component.html
+++ b/src/app/components/posts/briefing-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row page-content">
         <div class="col-sm-12">
             <h1 class="header">Briefings and consultation responses</h1>
@@ -20,7 +20,6 @@
                         7 April 2017
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/600/110/nature/8"> -->
                 <md-card-content>
                     <p>
                         SCVO regards Scottish devolution as a work in progress. As Scotland enters another period of constitutional change, there is an opportunity to explore which powers are needed to tackle the challenges the country faces.
@@ -57,7 +56,6 @@
                         1 February 2017
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/600/110/nature/10"> -->
                 <md-card-content>
                     <p>
                         The importance of our communities – particularly those whose voices are least heard – must be remembered during this budget debate.
@@ -97,7 +95,6 @@
                         28 February 2017
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/600/110/nature/11"> -->
                 <md-card-content>
                     <p>
                         In 2016 the Scottish Council for Voluntary Organisations (SCVO) produced the Right Approach campaign to promote and encourage human rights-based approaches in the Scottish third sector. The following report sets out the developing context of the campaign for the second half of the year. This includes external human rights developments, alongside an overview of the place of human rights within the third sector, details of the campaign’s content, followed by an evaluation and appendix of feedback on the campaign from SCVO members.
@@ -111,4 +108,4 @@
             </md-card>
         </div>
     </div>
-</div>
+</div> -->
