--- a/src/app/components/posts/post-list.component.html
+++ b/src/app/components/posts/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row page-content">
         <div class="col-sm-12">
             <h2 class="header">Latest blog posts</h2>
@@ -20,7 +20,6 @@
                         April 19, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Craig Wilson</a>
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/400/70/nature/1"> -->
                 <md-card-content>
                     <p>
                         Once more unto the breach&hellip;
@@ -48,7 +47,6 @@
                         April 17, 2017: <a [routerLink]="['/about/staff/craig-wilson']">James Adams</a>
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/400/70/nature/2"> -->
                 <md-card-content>
                     <p>
                         In the 5th of our local election blog&hellip;
@@ -76,7 +74,6 @@
                         April 10, 2017: <a [routerLink]="['/about/staff/craig-wilson']">John Downie</a>
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/400/70/nature/4"> -->
                 <md-card-content>
                     <p>
                         What next for charities&hellip;
@@ -104,7 +101,6 @@
                         April 10, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Amy Dalrymple</a>
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/400/70/nature/5"> -->
                 <md-card-content>
                     <p>
                         In the fourth blog in our series&hellip;
@@ -132,7 +128,6 @@
                         April 6, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Tracey Bird</a>
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/400/70/nature/6"> -->
                 <md-card-content>
                     <p>
                         Money, money, money&hellip;
@@ -146,4 +141,4 @@
             </md-card>
         </div>
     </div>
-</div>
+</div> -->
