--- a/src/app/components/services/services-page.component.html
+++ b/src/app/components/services/services-page.component.html
@@ -1,8 +1,4 @@
-<div class="container-fluid services-list">
-    <!--
-    <div class="row">
-    <div class="col s12 page-content">
-    <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div></div></div> -->
+<!-- <div class="container-fluid services-list">
     <div class="row row-eq-height">
         <div class="col-sm-12 col-md-6 col-lg-4">
             <md-card class="example-card">
@@ -21,7 +17,6 @@
                 </md-card-content>
                 <md-card-actions>
                     <button md-button [routerLink]="['/services/credit-union']">Read more</button>
-                    <!-- <button md-button>Visit</button> -->
                 </md-card-actions>
             </md-card>
         </div>
@@ -34,7 +29,6 @@
                     <md-card-title>Digital participation</md-card-title>
                     <md-card-subtitle>Helping people and third sector organisations in Scotland develop their digital potential</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         Right now in Scotland, one in five adults lack Basic Digital Skills. These are the skills of safely communicating, transacting, managing information, problem solving and creating content to use the internet as part of modern day to day life.
@@ -55,7 +49,6 @@
                     <md-card-title>Events</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                     </p>
@@ -74,7 +67,6 @@
                     <md-card-title>Funding Scotland</md-card-title>
                     <md-card-subtitle>Find funding for your charity, community group or social enterprise using our free online search engine</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         Funding Scotland lists funders with a track record of supporting projects in Scotland. It includes grants, loans, prizes and other support. It is a valuable resource for charities, community groups, social enterprises and voluntary organisations of all shapes and sizes. It does not include funding opportunities for individuals or businesses.
@@ -95,7 +87,6 @@
                     <md-card-title>Good HQ</md-card-title>
                     <md-card-subtitle>Share your experiences and get involved</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         Good HQ is the new digital platform that provides a place for people to review and share their experiences about the good causes and charities they care about.
@@ -122,7 +113,6 @@
                     <md-card-title>Goodmoves</md-card-title>
                     <md-card-subtitle>The premier careers hub for The Civil Society, Charity and Voluntary Sector</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                     </p>
@@ -142,7 +132,6 @@
                     <md-card-title>Keystone</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         KeyStone is a quality award and management toolkit for the people who manage village halls and community buildings. It provides checklists and resources to help you manage your building.
@@ -162,7 +151,6 @@
                     <md-card-title>Managed IT</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         The SCVO IT Service offers a broad range of expertise to bring you the right technological solutions and support to help you in your day-to-day work. From sourcing the right equipment to meet your budget and specific needs to making sure it all runs smoothly, we’ve got it covered.
@@ -182,7 +170,6 @@
                     <md-card-title>Office Space</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         We think everyone in the third sector should have great places to work, so we’ve opened our doors to create shared office spaces for other charities and social enterprises. We’d really like you to keep us company.
@@ -202,7 +189,6 @@
                     <md-card-title>Payroll</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                     </p>
@@ -221,7 +207,6 @@
                     <md-card-title>Professional networks</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         SCVO's professional networks offer great opportunities for you to meet people with similar roles from across the sector.
@@ -241,7 +226,6 @@
                     <md-card-title>Third Force News</md-card-title>
                     <md-card-subtitle>The voice of Scotland's third sector</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         Third Force News (TFN) is Scotland’s only dedicated daily news outlet for charities and voluntary organisations in Scotland.
@@ -265,7 +249,6 @@
                     <md-card-title>Training</md-card-title>
                     <md-card-subtitle></md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                     </p>
@@ -284,7 +267,6 @@
                     <md-card-title>SAIF</md-card-title>
                     <md-card-subtitle>Scottish Accessible Information Forum</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         SAIF aims to make information accessible to everyone who needs it. SAIF does this by raising awareness and understanding of the importance of accessible information and by providing a range of guidance, advice and practical support to information providers across Scotland.
@@ -305,7 +287,6 @@
                     <md-card-title>SCVO membership</md-card-title>
                     <md-card-subtitle>Supporting, promoting &amp; connecting Scotland's third sector</md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
                         Whether you're a small voluntary group just starting out, an established household name or somewhere in between, membership of SCVO provides great benefits.
@@ -317,4 +298,4 @@
             </md-card>
         </div>
     </div>
-</div>
+</div> -->
