--- a/src/app/components/digital/page.component.html
+++ b/src/app/components/digital/page.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 page-content">
-            <iframe src="https://digital.scvo.org.uk" width="100%" height="600px" border="0" style="border:none;"></iframe>
+            <!-- <iframe src="https://digital.scvo.org.uk" width="100%" height="600px" border="0" style="border:none;"></iframe> -->
         </div>
         <!-- <div class="col-sm-12 col-md-10 col-lg-9 page-content">
             <div class="admin-edit pull-right" *ngIf="showEdit">
