--- a/src/app/components/posts/research-list.component.html
+++ b/src/app/components/posts/research-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row page-content">
         <div class="col-sm-12">
             <h1 class="header">Research</h1>
@@ -20,7 +20,6 @@
                         25th Apr, 2017
                     </md-card-subtitle>
                 </md-card-header>
-                <!-- <img md-card-image src="http://lorempixel.com/600/110/nature/8"> -->
                 <md-card-content>
                     <p>
                         Spring 2017
@@ -37,4 +36,4 @@
             </md-card>
         </div>
     </div>
-</div>
+</div> -->
