Minor styling updates

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -441,8 +441,9 @@ h1.parent_title a {
 // .scvo-layout-waterfall .row .mdl-navigation__link:last-of-type  {
 //     // padding-left: 0;
 // }
-.row .mdl-navigation__link {
-    padding: 0 15px;
+.mdl-layout__header-row .mdl-navigation__link {
+    padding: 0 1rem;
+    font-weight: 600;
 }
 
 mdl-layout-header, .navbar .dropdown-content, main .btn,
