Removing firestore stuff for now

--- a/src/app/components/router/router.component.html
+++ b/src/app/components/router/router.component.html
@@ -1,3 +1,1 @@
-<p>
-  router works!
-</p>
+<div #contentContainer class="markdown-content" dynamic-component [componentTemplate]="html" [componentContext]="this" [componentModules]="modules"></div>
