--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h1>app.component.html</h1>
-<p>You shouldn't be seeing this</p>
-
-<router-outlet></router-outlet>
+<div #appComponent dynamic-component [componentTemplate]="html" [componentContext]="this" [componentModules]="modules"></div>
