Fixes and primative search handling (needs component)

--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -1,12 +1,12 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css);
 
 :root{
-    --mdc-theme-primary: #58a934;
-    --mdc-theme-primary-light: #8bdb63;
-    --mdc-theme-primary-dark: #217900;
-    --mdc-theme-secondary: #594743;
-    --mdc-theme-secondary-light: #86726e;
-    --mdc-theme-secondary-dark: #2f201c;
+    --mdc-theme-primary: #00796b;
+    --mdc-theme-primary-light: #48a999;
+    --mdc-theme-primary-dark: #004c40;
+    --mdc-theme-secondary: #546e7a;
+    --mdc-theme-secondary-light: #819ca9;
+    --mdc-theme-secondary-dark: #29434e;
     --mdc-theme-background: #ededed;
 }
 
