Updated routing stuff to load routes straight from cloud function

--- a/functions/test-db/scvo/index-template.hbs
+++ b/functions/test-db/scvo/index-template.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
     {{#with primaryResponse.hits.hits.[0]._source}}
-        {{{full}}}   
+        {{{rendered.full}}}   
     {{/with}}
 </div>
