--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -8,10 +8,13 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-net.appspot.com/goodmoves-material-colours.css">
     <style type="text/css">
         {{{this.css}}}
     </style>
+    {{{headerTags}}}
+    <script type="application/ld+json">
+        {{{route.jsonLd}}}
+    </script>
 </head>
 <body>
     <scvo-site>
