--- a/functions/test-db/scvo/index-json-ld-template.hbs
+++ b/functions/test-db/scvo/index-json-ld-template.hbs
@@ -1,5 +1,8 @@
+JSON LD
 {{#compare primaryResponse.hits.hits.length ">" 0}}
+    Inside Primary Response Compare
     {{#with primaryResponse.hits.hits.[0]._source}}
+        Inside Primary Response With
         {{["json-ld"]}}
     {{/with}}
 {{else}}
