--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -39,7 +39,7 @@
                 <nav class="mdc-temporary-drawer__drawer">
                     <header class="mdc-temporary-drawer__header">
                         <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg mdc-theme--text-primary-on-primary">
-                            SCVO 
+                            SCVO
                         </div>
                     </header>
                     <nav class="mdc-temporary-drawer__content mdc-list-group">
@@ -48,10 +48,7 @@
                                 <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">home</i>Home
                             </a>
                             <a class="mdc-list-item" href="/search" data-mdc-tabindex-handled="true" tabindex="-1">
-                                <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">work</i>Vacancies
-                            </a>
-                            <a class="mdc-list-item" href="/organisations" data-mdc-tabindex-handled="true" tabindex="-1">
-                                <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">business</i>Organisations
+                                <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">search</i>Search
                             </a>
                         </div>
                     </nav>
@@ -60,7 +57,7 @@
 
             <main class="mdc-toolbar-fixed-adjust">
                 <div class="page-content">
-                    <router-outlet>{{{route.rendered}}}</router-outlet>  
+                    <router-outlet>{{{route.rendered}}}</router-outlet>
                 </div>
             </main>
         </div>
@@ -76,5 +73,3 @@
     <script type="text/javascript" src="main.bundle.js"></script>
 </body>
 </html>
-
-
