Moved custom directive to

--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -28,8 +28,8 @@
                     <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
                         <div class="mdc-form-field mdc-form-field--align-end">
                             <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
-                                <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" id="search"> 
-                                <!-- [searchRoute]="main-search" [paramsTemplate]="{ queryParams: { q: '%q' } }"> -->
+                                <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" id="search" 
+                                    [searchRoute]="main-search" [paramsTemplate]="{ queryParams: { q: '%q' } }">
                             </div>
                         </div>
                     </section>
