SearchBox now a working directive

--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -29,7 +29,7 @@
                         <div class="mdc-form-field mdc-form-field--align-end">
                             <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
                                 <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" id="search" 
-                                    [searchRoute]="main-search" [paramsTemplate]="{ queryParams: { q: '%q' } }">
+                                    [searchRoute]='"main-search"' [paramsTemplate]='"{ \"queryParams\": { \"q\": %q } }"'>
                             </div>
                         </div>
                     </section>
