--- a/functions/test-db/scvo/main-search-template.hbs
+++ b/functions/test-db/scvo/main-search-template.hbs
@@ -1,4 +1,12 @@
 <div class="container-fluid">
+    <div class="mdc-card">
+        <section class="mdc-card__primary">
+            <h2 class="mdc-card__title mdc-card__title--large">Search SCVO</h2>
+            <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" 
+                [searchroute]='"main-search"' [paramstemplate]='"{ \"queryParams\": { \"q\": %q } }"'>
+        </section>
+    </div>
+
     {{#each primaryResponse.hits.hits}}
         {{#if _source.rendered.search_result_scvo}}
             {{{_source.rendered.search_result_scvo}}}
