Removing JSON files from test-db

--- a/functions/test-db/scvo/post-template.hbs
+++ b/functions/test-db/scvo/post-template.hbs
@@ -6,6 +6,11 @@
                     {{{rendered.full}}}   
                 {{/with}}
             </div>
+            <div class="mdc-layout-grid__cell">
+                {{#with supplimentaryResponses.author.hits.hits.[0]._source}}
+                    {{{rendered.post}}}
+                {{/with}}
+            </div>
         </div>
     </div>
 </div>
