--- a/functions/test-db/scvo/post-template.hbs
+++ b/functions/test-db/scvo/post-template.hbs
@@ -7,6 +7,8 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                Author info
+                {{supplimentaryResponses.author.took}}
                 {{#with supplimentaryResponses.author.hits.hits.[0]._source}}
                     {{{rendered.post}}}
                 {{/with}}
