Updated Post templates to show related info

--- a/functions/test-db/scvo/post-template.hbs
+++ b/functions/test-db/scvo/post-template.hbs
@@ -7,11 +7,12 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                Author info
-                {{supplimentaryResponses.author.took}}
-                {{#with supplimentaryResponses.author.hits.hits.[0]._source}}
+                {{#with supplimentaryResponse.author.hits.hits.[0]._source}}
                     {{{rendered.post}}}
                 {{/with}}
+                {{#each supplimentaryResponse.authors_posts.hits.hits}}
+                    {{{_source.rendered.search_result_scvo}}}
+                {{/each}}
             </div>
         </div>
     </div>
