--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -52,6 +52,41 @@
     border-top: 1px solid #dddddd;
 }
 
+.inline-list {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    li {
+        list-style: none;
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+    }
+
+    li:not(:last-child) {
+        margin-right: 5px;
+    }
+}
+
+.inline-material-icon {
+    vertical-align: middle;
+}
+
+.v-margin {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.h-margin {
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+.t-margin { margin-top: 15px; }
+.b-margin { margin-bottom: 15px; }
+.l-margin { margin-left: 15px; }
+.r-margin { margin-right: 15px; }
+
 .horizontal-list-details {
     display: flex;
     padding: 0 0 0;
