--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -68,6 +68,32 @@
     }
 }
 
+ul.supplimentary-list {
+    margin:0;
+    padding:0;
+    li.supplimentary-list-item {
+        list-style:none;
+        margin: 0;
+        padding: 0;
+        span {
+            display:block;
+        }
+        span.supplimentary-list-title {
+            font-size:1.3em;
+        }
+        span.supplimentary-list-detail {
+            font-size:0.9em;
+            color:#555555;
+        }
+        span.supplimentary-list-text {
+            
+        }
+    }
+    li.supplimentary-list-item:not(:last-child){
+        margin-bottom: 5px;
+    }
+}
+
 .inline-material-icon {
     vertical-align: middle;
 }
