--- a/functions/test-db/scvo/post-template.hbs
+++ b/functions/test-db/scvo/post-template.hbs
@@ -7,9 +7,12 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                {{#each supplimentaryResponse.authors_posts.hits.hits}}
-                    {{{_source.rendered.search_result_scvo}}}
-                {{/each}}
+                <h3 class="">Other posts by author</h3>
+                <ul class="supplimentary-list">
+                    {{#each supplimentaryResponse.authors_posts.hits.hits}}
+                        {{{_source.rendered.list}}}
+                    {{/each}}
+                </ul>
             </div>
         </div>
     </div>
