Updated post route and template to show relevent images

--- a/functions/test-db/scvo/post-template.hbs
+++ b/functions/test-db/scvo/post-template.hbs
@@ -1,3 +1,7 @@
+{{#with supplimentaryResponse.splash.hits.hits.[0]._source}}
+    <div class="splash-image" style="background-image:url({{original_image}});"></div>
+{{/with}}
+
 <div class="container-fluid">
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
