--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -52,6 +52,12 @@
     border-top: 1px solid #dddddd;
 }
 
+.splash-image {
+    background-size: cover;
+    height: 33.333vh;
+    background-position: center center;
+}
+
 .inline-list {
     display: inline-block;
     margin: 0;
